Change names to launchday

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ant-starter",
+  "name": "launchday-frontend",
   "version": "0.0.1",
   "homepage": "http://localhost",
   "dependencies": {
