--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "react-ant-starter",
-  "name": "React Ant Starter",
+  "short_name": "Launchday",
+  "name": "Launchday",
   "icons": [
     {
       "src": "images/favicon.png",
