--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "antd": "^3.23.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.1",
+    "chart.js": "^2.8.0",
     "customize-cra": "^0.6.0",
+    "distinct-colors": "^1.0.4",
     "eslint": "^6.3.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "moment-timezone": "^0.5.26",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
+    "react-chartjs-2": "^2.8.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
@@ -56,11 +60,12 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.2.0",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "react-json-view": "^1.19.1",
     "typescript": "^3.6.2"
   }
 }
