--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "moment-timezone": "^0.5.26",
+    "querystring": "^0.2.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-chartjs-2": "^2.8.0",
