--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,43 @@
   "name": "Launchday",
   "icons": [
     {
-      "src": "images/favicon.png",
+      "src": "images/pwa-icon72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon128.png",
       "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "images/pwa-icon512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
