--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-chartjs-2": "^2.8.0",
+    "react-cookies": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
