Prepare for hacker news

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL=https://launchday.glitch.me/
+REACT_APP_HN_BASE_URL=https://hn-track.glitch.me
+REACT_APP_PH_BASE_URL=https://ph-track.glitch.me
