Add static links to redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,13 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[redirects]]
+  from = "/static/terms"
+  to = "/static/terms.html"
+  status = 200
+
+  [[redirects]]
+  from = "/static/policies"
+  to = "/static/policies.html"
+  status = 200
